--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
         </symbol>
       </defs>
     </svg>
+    <button id="myButton" class="float-left submit-button" >HARDMODE</button>
+
+    <script type="text/javascript">
+    document.getElementById("myButton").onclick = function () {
+        location.href = "https://bit.ly/2VlpwDL";
+    };
+    </script>
     <ul class="circles" style="pointer-events:none; ">
         <li></li>
         <li></li>
